[package]
authors = ["hoanm <mr.nmh175@gmail.com>"]
edition = "2021"
name = "nft-marketplace-v2"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std = "1.1.9"
cw721 = "0.16.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
cw20 = "1.0.1"
cw2981-royalties = { path = "../cw2981-royalties", version = "0.15.0", features = [
  "library",
] }
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
thiserror = { version = "1.0.49" }

[dev-dependencies]
cw-multi-test = "0.18.0"
